<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TSV Kalender</string>
    <string name="action_settings">Einstellungen</string>

    <string-array name="sports_array">
        <item>Thüringer Skiverband</item>
        <item>Skilanglauf</item>
        <item>Sprung / Nord. Kombination</item>
        <item>Biathlon</item>
        <item>Alpin</item>
    </string-array>

    <string name="tsv">TSV</string>
    <string name="sll">SLL</string>
    <string name="nk">NK</string>
    <string name="bia">Bia</string>
    <string name="ssp">Sp</string>
    <string name="alp">Alp</string>
    <string name="title_calendar_list">Termine</string>
    <string name="contact">Kontakte</string>
    <string name="title_contacts_list">Vereine</string>
    <string name="content_hint_series">Serie :</string>
    <string name="content_hint_starters">Starterfeld :</string>
    <string name="content_hint_form">Technik / Art :</string>
    <string name="content_hint_club">Ausrichter :</string>
    <string name="content_hint_extra">Information :</string>
    <string name="content_hint_mob">Mobil :</string>
    <string name="content_hint_tel">Telefon :</string>
    <string name="content_hint_fax">Fax :</string>
    <string name="content_hint_name">Name: </string>
    <string name="content_hint_mail">Mail: </string>
    <string name="content_hint_function">Funktion: </string>
    <string name="content_hint_adress">Anschrift :</string>
    <string name="settings_info">Wähle den Kalender in den du die Termine einfügen möchtest:\n\n</string>
    <string name="email_intent">Gesendet von der TSV Kalender App für Android\n\n\n\n\n</string>
    <string name="select">alle wählen</string>
    <string name="deselect">Auswahl leeren</string>
    <string name="list">Liste</string>
    <string name="calendar">Kalender</string>
    <string name="selected">einfügen</string>
    <string name="no_entries">Für die gewählte Sportart gibt es leider keine Einträge.</string>
    <string name="insert">In Kalender einfügen</string>
    <string name="no_calendar">Es konnte kein Kalender gewählt werden.</string>
    <string name="cal_of">Terminkalender\nThüringer Skiverband</string>
    <string name="calendar_dates">Kalender</string>
    <string name="navigation_drawer_open">Schließen</string>
    <string name="navigation_drawer_close">Öffnen</string>
    <string name="ad_unit_id">ca-app-pub-3339452278602876/9221106346</string>
    <string name="ad_interstitial_id">ca-app-pub-3339452278602876/8728251949</string>
    <string name="thank_you_for_billing">Danke!\nBitte beachten Sie, dass es einige Minuten dauern kann bis die Änderung wirksam wird.</string>
    <string name="play_store_billing_needed">Dieser Kauf benötigt den `Google Play Store` auf deinem Smartphone</string>
    <string name="overview">Übersicht</string>
    <string name="remove_ads">Werbung entfernen</string>
    <string name="search_hint">Suche</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
